Add python support for test harness
Signed-off-by: syzygial <67280346+syzygial@users.noreply.github.com>

--- a/cmake/gdbinit.in
+++ b/cmake/gdbinit.in
@@ -1,2 +1,3 @@
 set substitute-path src @CMAKE_SOURCE_DIR@/src
 set substitute-path test @CMAKE_SOURCE_DIR@/test
+set substitute-path build @CMAKE_BINARY_DIR@
