--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
   endif()
 endif()
 
-set(WITH_PYTHON "OFF" CACHE BOOL "Build python module")  
+set(WITH_PYTHON "ON" CACHE BOOL "Build python module")
 find_package (Python COMPONENTS Interpreter Development)
 if(NOT Python_FOUND)
   set(WITH_PYTHON "OFF")
@@ -63,6 +63,11 @@ set(TEST_MTRACE "OFF" CACHE BOOL "Run tests with mtrace enabled")
 
 set(GDBINIT_FIX "OFF" CACHE BOOL "Create .gdbinit file in build directory to fix \
 debug symbol path issues caused by -ffile-prefix-map")
+
+set(PYTEST "ON" CACHE BOOL "Include python tests")
+if(NOT Python_Development_FOUND OR NOT WITH_PYTHON)
+  set(PYTEST "OFF")
+endif()
 
 if (WITH_PULSEAUDIO)
   target_link_libraries(hiemal pulse)
@@ -97,7 +102,7 @@ set_target_properties(hiemal PROPERTIES
 
 add_subdirectory(src/core)
 add_subdirectory(src/util)
-add_subdirectory(src/python)
+#add_subdirectory(src/python)
 if(WITH_UTILS)
   add_subdirectory(src/utils)
 endif()
@@ -172,5 +177,10 @@ if (TEST_MTRACE)
   message(STATUS "  Run tests with mtrace: YES")
 else()
   message(STATUS "  Run tests with mtrace: NO")
+endif()
+if (NOT PYTEST)
+  message(STATUS "  Python tests: NO")
+else()
+  message(STATUS "  Python tests: YES")
 endif()
 message(STATUS "")
