--- a/src/core/ops/CMakeLists.txt
+++ b/src/core/ops/CMakeLists.txt
@@ -1,7 +1,3 @@
-add_library(hmops STATIC)
-target_include_directories(hmops PUBLIC ../include)
-target_sources(ops.c)
-add_custom_command(OUTPUT ops.c
-  DEPENDS util/gen_ops.py ops.c.in
-  COMMAND python3 util/gen_ops.py
-  COMMENT "generating ops")
+target_include_directories(hiemal PUBLIC ${CMAKE_BINARY_DIR}/src/core/ops)
+
+target_sources(hiemal PRIVATE ${CMAKE_BINARY_DIR}/src/core/ops/ops.c)
